# esp32-axum-helloworld

./: Cargo.toml  README.md  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
src/: main.rs
src/webserver/: handlers.rs  mod.rs
