[package]
name = "esp32-axum-helloworld"
version = "0.1.0"
authors = ["Bill-Callahan <bill@callahansecurity.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[patch.crates-io]
tokio = { git = "https://github.com/tokio-rs/tokio", branch = "master" }
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
socket2 = { git = "https://github.com/rust-lang/socket2", branch = "master" }

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-sys = { version = "0.33.1", features = ["binstart"] }
esp-idf-svc = { version = "0.47.3", features = ["experimental"] }
esp-idf-hal = "0.42.5"
embedded-svc = { version = "0.26.4", features = ["experimental"] }
embedded-hal = "0.2.7"
log = "0.4.17"
anyhow = "1"
tokio = { version = "*", features = ["rt", "net", "io-util"] }
mio = { version = "0.8.8", features = ["log"] }
axum = "0.7.3"

[build-dependencies]
embuild = "0.31.3"
anyhow = "1"
